--- a/package.json
+++ b/package.json
@@ -9,10 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "eslint": "8.34.0",
-    "eslint-config-next": "13.2.1",
-    "next": "13.2.1",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@next/font": "13.1.6",
+    "@radix-ui/react-icons": "^1.2.0",
+    "@tanstack/react-query": "^4.24.6",
+    "@tanstack/react-query-devtools": "^4.24.6",
+    "autoprefixer": "^10.4.13",
+    "axios": "^1.3.4",
+    "gsap": "^3.11.4",
+    "next": "13.1.6",
+    "postcss": "^8.4.21",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-circular-progressbar": "^2.1.0",
+    "react-dom": "18.2.0",
+    "react-feather": "^2.0.10",
+    "react-hot-toast": "^2.4.0",
+    "react-icons": "^4.7.1",
+    "react-query": "^3.39.3",
+    "react-transition-group": "^4.4.5"
+  },
+  "devDependencies": {
+    "@svgr/webpack": "^6.5.1",
+    "babel-plugin-inline-react-svg": "^2.0.2",
+    "tailwindcss": "^3.2.7"
   }
 }
